# wind-tunnel

./: .gitignore  CLAUDE.md  DESIGN_BRIEF.md  LICENSE  PROJECT_BRIEF.md  README.md  STATUS.md  SYSTEM_OVERVIEW.ipynb  TECH_SPEC.md  outline.md
.github/workflows/: README.md  governance.yml  ingestion.yml  pages.yml
backend/: README.md  app.py  config.py  dispatch.py  github_io.py  outline.py  pyproject.toml
backend/brainstorm/: __init__.py  feasibility.py  interviewer.py  mapgen.py  poc.py  sufficiency.py  synthesis.py  transcript.py
backend/tests/: conftest.py  test_app.py  test_brainstorm.py  test_github_io.py  test_outline.py  test_poc_map.py  test_upload.py
config/: budgets.yml  licences.yml  models.yml  retrieval.yml
corpus/: README.md
corpus/data_governance/: C2026C00223.docx  C2026C00223.docx.meta.yml  Data and Digital Government Strategy v1.0_0.pdf.meta.yml  Data-quality-checklist.pdf.meta.yml  Information management for records created using Artificial Intelligence.md  Information management for records created using Artificial Intelligence.md.meta.yml
corpus/ethics/: 23-00122_DATA61_REPORT_NAIC-ResponsibleAITools_WEB_230620.pdf.meta.yml  2305.12728v1.pdf.meta.yml  Ahrc_rightstech_2021_final_report_3.docx.meta.yml  Ai_guidance_resource_december_2022.docx.meta.yml  Australia’s AI Ethics Principles.md  Australia’s AI Ethics Principles.md.meta.yml  Creative Australia - Generative AI and creative work paper.pdf.meta.yml  Generative AI - Position Statement - August 2023.pdf.meta.yml  Guidance-for-AI-adoption-implementation-guidance_0_0.pdf.meta.yml  SBD -  Principles.pdf.meta.yml  TRS-GUIDANCE-AI-150925.pdf.meta.yml  The-new-machinery-of-government-special-report_Front-section.pdf.pdf.meta.yml  Voluntary AI Safety Standard.docx  Voluntary AI Safety Standard.docx.meta.yml  Voluntary-AI-Safety-Standard.md  apo-nid306481.pdf.meta.yml  co-design-lessons-learned-report.pdf.meta.yml  framework-governance-indigenous-data.docx  framework-governance-indigenous-data.docx.meta.yml  ltib-report-how-might-ai-affect-trust-ps-delivery.pdf.meta.yml
corpus/it_security/: CSI_AI_Data_Security.pdf.meta.yml  Cloud controls matrix template (June 2026).xlsx  Cloud controls matrix template (June 2026).xlsx.meta.yml  Deploying AI Systems Securely – Best Practices for Deploying Secure and Resilient AI Systems.pdf.meta.yml  Essential Eight assessment process guide (October 2024).pdf.meta.yml  (+11 more)
docs/: bot_card.md  challenge_submission_email.md
fixtures/: README.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts  windtunnel_agent_telemetry.html
instrument/: README.md  consequence_table.json  likelihood_table.json  questions.json  risk_matrix.json  sections.json
kb/: README.md  data_governance.index.json  data_governance.manifest.json  data_governance.sqlite  ethics.index.json  ethics.manifest.json  ethics.sqlite  it_security.index.json  it_security.manifest.json  legal.index.json  legal.manifest.json  legal.sqlite  privacy.index.json  privacy.manifest.json  privacy.sqlite  solution_architect.index.json  solution_architect.manifest.json  solution_architect.sqlite
pipeline/: README.md  llm.py  pyproject.toml  run.py  runcode.py  statefile.py  status.py
pipeline/agents/: __init__.py  architect.py  prompting.py  reviewer.py  specialist.py  threshold.py
pipeline/assembly/: __init__.py  notebook.py  references.py  render.py
pipeline/assembly/templates/: report.css
pipeline/rating/: README.md  __init__.py  engine.py
pipeline/rating/tests/: test_engine.py
pipeline/retrieval/: __init__.py  chunk.py  db.py  extract.py  index_build.py  ingest.py  manifest.py  model.py  retrieve.py  sidecar.py  tokens.py
pipeline/retrieval/tests/: test_retrieval.py
pipeline/stages/: __init__.py  assembly.py  context.py  fanout.py  full.py  threshold.py
pipeline/tests/: conftest.py  test_architect.py  test_assembly.py  test_full_drafting.py  test_full_revising.py  test_git_committer.py  test_instrument.py  test_llm.py  test_review.py  test_runstate.py  test_threshold_pipeline.py  test_user_revision.py
prompts/: README.md  architect.v1.md  feasibility_gate.v1.md  interviewer.v1.md  manifest.yml  map_gen.v1.md  poc_gen.v1.md  reviewer.v1.md  revision_triage.v1.md  revision_verify.v1.md  specialist.v1.md  sufficiency.v1.md  threshold_generalist.v1.md  threshold_reconciler.v1.md
runs/: README.md
(+481 files in other folders)
