# backend/ — Brainstorm backend (FastAPI, deployed to Render)
# Conventions: CLAUDE.md §4. Python 3.11, uv, ruff, pytest.
[project]
name = "windtunnel-backend"
version = "0.0.0"
description = "Windtunnel Brainstorm backend: interview, outline, PoC, dispatch."
requires-python = "==3.11.*"
# Pinned as the app is built. Expected: fastapi, uvicorn, a Gemini client,
# a GitHub API client for the Contents/Git-Data commit helper (github_io.py §14).
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]  # import sorting
